aproape gata, ultima fereastra trebuie inca putin stilizata

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </s>
         <hr>
         <s class="section section2">
-            <h2>check out the wildlife</h2>
+            <h2 class="header2">check out the wildlife</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt nam earum nihil assumenda suscipit odio
                 commodi veritatis voluptate officiis, molestias asperiores ipsum magnam nobis voluptatibus ipsam odit
                 totam quia enim.
